--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ svg {
 }
 
 .head {
+    font-family: 'Bellefair', serif;
     background: #1f1f1f;
     width: 100%;
     min-width: 100%;
@@ -12,6 +13,7 @@ svg {
 
 .head h3 {
     color: white;
+    font-family: 'Eczar', serif;
 }
 
 .card {
@@ -19,18 +21,7 @@ svg {
     max-width: 250px;
     overflow: hidden;
     background-color: #ff8122;
-}
-
-.events {
-    display: table-cell;
-}
-
-.g1 {
-    display: table-cell;
-}
-
-.g2 {
-    display: table-cell;
+    font-family: 'Eczar', serif;
 }
 
 #counter {
@@ -49,25 +40,55 @@ svg {
     /*    position: absolute;*/
     max-height: 55%;
     min-width: 100%;
-    background-size: cover;
-    background-image: url(../img/ppt.jpg);
 }
 
 .ppt h1 {
+    font-family: 'Spectral', serif;
+    text-align: center;
     padding: 10px;
-    margin-left: 50px;
     font-size: 60px;
-    color: red;
+    color: #ffe200;
 }
 
 .ppt h2 {
-    margin-left: 10px;
+    text-align: center;
     font-size: 40px;
-    color: green;
+    color: #ffffff;
     padding: 10px;
+    font-family: 'Eczar', serif;
 }
 
-.bot h2 {
+.roborace h2 {
+    font-family: 'Catamaran', sans-serif;
     font-size: 60px;
     color: red;
+}
+
+.jam h2 {
+    font-family: 'Catamaran', sans-serif;
+    font-size: 60px;
+    color: red;
+}
+
+.roborace p {
+    text-align: left;
+}
+
+.overlay-bg {
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background: rgba(38, 38, 38, 0.8);
+    top: 0;
+}
+
+.overlay-bg.gradient-blue-aqua {
+    background: -moz-linear-gradient(45deg, rgba(2, 68, 129, 0.9) 0%, rgba(52, 176, 188, 0.8) 100%);
+    background: -webkit-linear-gradient(45deg, rgba(2, 68, 129, 0.9) 0%, rgba(52, 176, 188, 0.8) 100%);
+    background: linear-gradient(45deg, rgba(2, 68, 129, 0.9) 0%, rgba(52, 176, 188, 0.8) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc024481', endColorstr='#cc34b0bc', GradientType=1);
+}
+
+.full-height .overlay-bg {
+    display: table;
 }
