--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@ svg {
     background-size: cover;
 }
 
+.sec-ppt {
+    background: url(../img/ppt.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .head {
     font-family: 'Bellefair', serif;
     /*    background: #1f1f1f;*/
