--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ svg {
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.15), 0 4px 20px 0 rgba(0, 0, 0, 0.22);
     max-width: 250px;
     overflow: hidden;
-    background-color: #ff8122;
+    background-color: #157F1F;
     font-family: 'Eczar', serif;
 }
 
@@ -72,19 +72,32 @@ svg {
     font-family: 'Spectral', serif;
     text-align: center;
     font-size: 50px;
-    color: #ffe200;
+    color: #157F1F;
 }
 
 .ppt h2 {
     text-align: center;
     font-size: 30px;
-    color: #fd0000;
+    color: rgb(62, 114, 255);
     font-family: 'Eczar', serif;
 }
 
 .ppt p {
     color: white;
 }
+
+
+/*
+.roborace h2 {
+    background: url("../img/bot.png") no-repeat center; 
+}
+*/
+
+/*
+.roborace img {
+    max-height: 100px;
+    max-width: 100px;
+}*/
 
 .roborace h2 {
     font-family: 'Catamaran', sans-serif;
@@ -170,4 +183,292 @@ svg {
     max-width: 100px;
     background-color: rgba(0, 51, 188, 0.88);
     color: white;
+}
+
+
+/* ================ The Timeline ================ */
+
+.timeline {
+    position: relative;
+    width: 660px;
+    margin: 0 auto;
+    margin-top: 20px;
+    padding: 1em 0;
+    list-style-type: none;
+}
+
+.timeline:before {
+    position: absolute;
+    left: 50%;
+    top: 0;
+    content: ' ';
+    display: block;
+    width: 15px;
+    height: 100%;
+    margin-left: -10px;
+    background: rgb(0, 0, 0);
+    background: -moz-linear-gradient(top, rgba(80, 80, 80, 0) 0%, rgb(0, 0, 0) 0%, rgb(80, 80, 80) 100%, rgba(80, 80, 80, 0) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgb(0, 0, 0)), color-stop(100%, rgb(0, 0, 0)));
+    background: -webkit-linear-gradient(top, rgba(80, 80, 80, 0) 0%, rgb(0, 0, 0) 0%, rgb(80, 80, 80) 100%, rgba(80, 80, 80, 0) 100%);
+    background: -o-linear-gradient(top, rgba(80, 80, 80, 0) 0%, rgb(0, 0, 0) 0%, rgb(80, 80, 80) 100%, rgba(80, 80, 80, 0) 100%);
+    background: -ms-linear-gradient(top, rgba(80, 80, 80, 0) 0%, rgb(80, 80, 80) 0%, rgb(0, 0, 0) 100%, rgba(80, 80, 80, 0) 100%);
+    background: linear-gradient(#414141 0%, #000 100%);
+    z-index: 5;
+}
+
+.timeline li {
+    padding: 0.5em 0;
+}
+
+.timeline li:after {
+    content: "";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+
+.direction-l {
+    position: relative;
+    width: 300px;
+    float: left;
+    text-align: right;
+}
+
+.direction-r {
+    position: relative;
+    width: 300px;
+    float: right;
+}
+
+.flag-wrapper {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    font-size: 20px;
+}
+
+.flag {
+    position: relative;
+    display: inline;
+    background: rgb(248, 248, 248);
+    padding: 6px 10px;
+    border-radius: 5px;
+    font-weight: 600;
+    text-align: left;
+}
+
+.direction-l .flag {
+    -webkit-box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+    box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+}
+
+.direction-r .flag {
+    -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+}
+
+.direction-l .flag:before,
+.direction-r .flag:before {
+    position: absolute;
+    top: 50%;
+    right: -35px;
+    content: ' ';
+    display: block;
+    width: 30px;
+    height: 1px;
+    margin-top: -10px;
+    background: #0b0b0b;
+    border-radius: 10px;
+    border: 4px solid rgb(21, 21, 21);
+    z-index: 10;
+}
+
+.direction-r .flag:before {
+    left: -40px;
+}
+
+.direction-l .flag:after {
+    content: "";
+    position: absolute;
+    left: 100%;
+    top: 50%;
+    height: 0;
+    width: 0;
+    margin-top: -8px;
+    border: solid transparent;
+    border-left-color: rgb(248, 248, 248);
+    border-width: 8px;
+    pointer-events: none;
+}
+
+.direction-r .flag:after {
+    content: "";
+    position: absolute;
+    right: 100%;
+    top: 50%;
+    height: 0;
+    width: 0;
+    margin-top: -8px;
+    border: solid transparent;
+    border-right-color: rgb(248, 248, 248);
+    border-width: 8px;
+    pointer-events: none;
+}
+
+.time-wrapper {
+    display: inline;
+    line-height: 1em;
+    font-size: 0.66666em;
+    color: rgb(250, 80, 80);
+    vertical-align: middle;
+}
+
+.direction-l .time-wrapper {
+    float: left;
+}
+
+.direction-r .time-wrapper {
+    float: right;
+}
+
+.time {
+    display: inline-block;
+    padding: 4px 6px;
+    background: rgb(248, 248, 248);
+}
+
+.desc {
+    margin: 1em 0.75em 0 0;
+    font-size: 10px;
+    font-style: italic;
+    line-height: 1.5em;
+}
+
+.direction-r .desc {
+    margin: 1em 0 0 0.75em;
+}
+
+
+/* ================ Timeline Media Queries ================ */
+
+@media screen and (max-width: 700px) {
+    .fli {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        padding-bottom: 20px;
+        letter-spacing: 1px;
+        padding-top: 20px;
+    }
+    #footer {
+        height: 800px;
+        padding-top: 50px;
+        font-family: 'Open Sans', sans-serif;
+    }
+    #t {
+        text-align: center;
+        font-size: 35px;
+    }
+    #imp {
+        font-size: 20px;
+    }
+    .timeline {
+        width: 100%;
+        padding: 4em 0 1em 0;
+    }
+    .timeline li {
+        padding: 2em 0;
+    }
+    .direction-l,
+    .direction-r {
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
+    .flag-wrapper {
+        text-align: center;
+    }
+    .flag {
+        background: rgb(255, 255, 255);
+        z-index: 15;
+    }
+    .direction-l .flag:before,
+    .direction-r .flag:before {
+        position: absolute;
+        top: -30px;
+        left: 50%;
+        content: ' ';
+        display: block;
+        width: 12px;
+        height: 12px;
+        margin-left: -9px;
+        background: #ffffff;
+        border-radius: 10px;
+        border: 4px solid rgb(3, 3, 3);
+        z-index: 10;
+    }
+    .direction-l .flag:after,
+    .direction-r .flag:after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: -8px;
+        height: 0;
+        width: 0;
+        margin-left: -8px;
+        border: solid transparent;
+        border-bottom-color: rgb(255, 255, 255);
+        border-width: 8px;
+        pointer-events: none;
+    }
+    .time-wrapper {
+        display: block;
+        position: relative;
+        margin: 4px 0 0 0;
+        z-index: 14;
+    }
+    .direction-l .time-wrapper {
+        float: none;
+    }
+    .direction-r .time-wrapper {
+        float: none;
+    }
+    .desc {
+        position: relative;
+        margin: 1em 0 0 0;
+        padding: 1em;
+        background: rgb(245, 245, 245);
+        -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.20);
+        -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.20);
+        box-shadow: 0 0 1px rgba(0, 0, 0, 0.20);
+        z-index: 15;
+    }
+    .direction-l .desc,
+    .direction-r .desc {
+        position: relative;
+        margin: 1em 1em 0 1em;
+        padding: 1em;
+        z-index: 15;
+    }
+}
+
+@media screen and (min-width: 400px ?? max-width: 660px) {
+    .direction-l .desc,
+    .direction-r .desc {
+        margin: 1em 4em 0 4em;
+    }
+}
+
+.time-head {
+    color: rgba(255, 62, 62, 0.9);
+    font-family: 'Catamaran', sans-serif;
+    letter-spacing: 2px;
+}
+
+.con {
+    margin: 0px 50px;
 }
