--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-.vedios {
-    width: auto;
-    height: auto;
-    z-index: -100;
-    background: url('../img/produce_1.mp4') no-repeat;
-}
-
 body {}
 
 svg {
@@ -63,6 +56,9 @@ svg {
     font-family: 'Spectral', serif;
     font-size: 60px;
     letter-spacing: 3px;
+    margin: 0px;
+    padding: 10px;
+    background-image: url("../img/tex.jpg");
 }
 
 .ppt {
@@ -154,7 +150,8 @@ svg {
 
 .social {
     margin: 0px;
-    background-color: #656565;
+    background: url(../img/flat.gif);
+    background-origin: inherit;
 }
 
 .pad a {
@@ -476,7 +473,11 @@ svg {
 }
 
 .con {
-    margin: 0px 50px;
+    margin: 0px 0px;
+    padding: 0px 50px;
+
+    background-repeat: no-repeat;
+
 }
 
 .bg-img {
@@ -504,4 +505,14 @@ svg {
     text-align: right;
     max-height: 100px;
     max-width: 100px;
+}
+
+.roborace {
+    left: -10px;
+}
+@media only screen and (max-width: 775px) {
+    .roborace {
+    left: 0px;
+}
+    
 }
